altered the mat-list-item styling in styles.scss in order to stop overflowing text on sort component

--- a/src/app/play/brick/live.component.scss
+++ b/src/app/play/brick/live.component.scss
@@ -218,6 +218,7 @@ mat-card, .sort-list > mat-list-item {
 /**** Order component ****/
 .order-number {
     margin-right: 20px;
+    text-overflow: ellipsis;
 }
 
 
