--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,6 +80,11 @@ app-root {
     flex-grow: 1;
 }
 
+.mat-list-item {
+    height: auto !important;
+    padding: 5px;
+}
+
 .mat-toolbar.mat-primary {
     background-color: #111F33;
 }
